tests/baselines/reference/letAsIdentifierInStrictMode.errors.txt
tests/cases/compiler/letAsIdentifierInStrictMode.ts(2,5): error TS1134: Variable declaration expected.
tests/cases/compiler/letAsIdentifierInStrictMode.ts(2,9): error TS1134: Variable declaration expected.
tests/cases/compiler/letAsIdentifierInStrictMode.ts(2,11): error TS1134: Variable declaration expected.
tests/cases/compiler/letAsIdentifierInStrictMode.ts(4,5): error TS1134: Variable declaration expected.
tests/cases/compiler/letAsIdentifierInStrictMode.ts(4,7): error TS1134: Variable declaration expected.
tests/cases/compiler/letAsIdentifierInStrictMode.ts(3,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/letAsIdentifierInStrictMode.ts(6,1): error TS2300: Duplicate identifier 'a'.


==== tests/cases/compiler/letAsIdentifierInStrictMode.ts (7 errors) ====
    "use strict";
    var let = 10;
        ~~~
!!! error TS1134: Variable declaration expected.
            ~
!!! error TS1134: Variable declaration expected.
              ~~
!!! error TS1134: Variable declaration expected.
    var a = 10;
        ~
!!! error TS2300: Duplicate identifier 'a'.
    let = 30;
        ~
!!! error TS1134: Variable declaration expected.
          ~~
!!! error TS1134: Variable declaration expected.
    let
    a;
    ~
!!! error TS2300: Duplicate identifier 'a'.